# visileaf

./: .gitignore  README.md  masterclass_proposals.md  refinement_proposals.md
backend/: alembic.ini  openapi.json  pyproject.toml  requirements.txt
backend/app/: __main__.py  cli.py  main.py
backend/app/config/: __init__.py  cors.py  database.py  i18n.py  logging.py  server.py  swagger.py
backend/app/controllers/: __init__.py  auth_controller.py  deep_learning_enhancement_controller.py  enhancement_controller.py
backend/app/locales/: en.json  tr.json
backend/app/middleware/: __init__.py  i18n_middleware.py
backend/app/migrations/: .gitkeep  20251122_1659_9df2101f1765_create_initial_tables.py  20251122_1734_a006e695d4af_add_language_to_user.py  20251122_1924_ea82047169a7_add_code_to_password_reset_token.py  20251205_2256_708bf79769db_is_starred.py
backend/app/models/: __init__.py  audit_log.py  image.py  password_reset_token.py  user.py
backend/app/repositories/: __init__.py  audit_log_repository.py  image_repository.py  password_reset_token_repository.py  user_repository.py
backend/app/routes/: __init__.py  auth.py  enhancement.py
backend/app/schemas/: auth.py  enhancement.py
backend/app/services/: __init__.py  audit_log_service.py  auth_service.py  email_service.py  enhance_with_deep_learning_service.py  enhancement_service.py  image_service.py
backend/app/templates/: forgot_password.html
backend/app/utils/: jwt.py  (+1 more)
backend/cmds/: commands.md
backend/docs/: ENHANCEMENT_DOCS.md  MIGRATION_GUIDE.md  commands.md  db_structure.sql  endpoints.md
(+63 files in other folders)
