[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visileaf-backend"
version = "0.1.0"
description = "Visileaf Backend API"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg[binary]>=3.1.14",
    "python-dotenv>=1.0.0",
    "colorlog>=6.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
# Projeyi başlatmak için
start = "app.cli:start"
dev = "app.cli:dev"

